# imGraph

./: CMakeLists.txt  Doxyfile  ProjectAdd.cmake  README.txt  config.xml  fetch_build.ps1
Examples/: FindAndDrawPoints.igp  drawPoints.igp  saveImages.igp  skipFrame.igp
IHM/: CMakeLists.txt  SRC_BLOCKS  main.cpp
IHM/view/: Connectors.cpp  GraphicView.cpp  GraphicView.h  ImagePreview.h  ParameterDock.cpp  ParameterDock.h  VertexRepresentation.cpp  VertexRepresentation.h  Window.cpp  Window.h
Sources/: Block.cpp  Block.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Connectors.h  Convertor.h  Convertors.cpp  Graph.cpp  Graph.h  GraphicView.cpp  GraphicView.h  Internationalizator.cpp  Internationalizator.h  MatrixConvertor.cpp  MatrixConvertor.h  MatrixEditor.cpp  MatrixEditor.h  ProcessManager.cpp  ProcessManager.h  SubBlock.cpp  SubBlock.h  Window.cpp  Window.h  main.cpp  window_QT.cpp  window_QT.h  window_QT.qrc
Sources/Milky/64/: Thumbs.db
Sources/blocks/: AccuBlock.cpp  AddBlock.cpp  Binarization.cpp  Block.cpp  Block.h  BlurBlock.cpp  CORE_filter.cpp  Canny.cpp  CascadeClassifier.cpp  CreateMatrix.cpp  CropBlock.cpp  DeinterlaceBlock.cpp  DelayBlock.cpp  DistanceTransform.cpp  DrawLines.cpp  DrawMask.cpp  FaceDetection.cpp  Filter2D.cpp  FlowBlock.cpp  HistoBlock.cpp  InputBlocks.cpp  InputBlocks.h  IterationBlock.cpp  IterationBlock.h  Laplacian.cpp  LineFinderBlock.cpp  MergeBlock.cpp  MorphologicBlock.cpp  NormalizeBlock.cpp  ParamValidator.cpp  ParamValidator.h  ParamValue.cpp  ParamValue.h  PointFinder.cpp  PointMatcher.cpp  ShowGraph.cpp  StringCreation.cpp  Thinning.cpp  WriteBlock.cpp  YUVreader.cpp  (+3 more)
Sources/view/: Connectors.cpp  Connectors.h  GraphViewer.cpp  GraphViewer.h  GraphicView.cpp  GraphicView.h  GuiReceiver.cpp  GuiReceiver.h  ImagePreview.cpp  ImagePreview.h  MatrixViewer.cpp  MatrixViewer.h  MatrixViewer.qrc  ParameterDock.cpp  ParameterDock.h  SmallDialogs.cpp  SmallDialogs.h  VertexRepresentation.cpp  VertexRepresentation.h  Window.cpp  Window.h  window_QT.cpp  window_QT.qrc
include/: Thumbs.db  dirlightdiffambpix.frag  dirlightdiffambpix.vert
include/GL/: glew.h
include/qwt/: CMakeLists.txt  qwt_magnifier.cpp  qwt_panner.cpp  qwt_picker.cpp  qwt_plot.cpp  qwt_plot.h  qwt_plot_renderer.cpp  qwt_plot_spectrogram.cpp  qwt_plot_svgitem.cpp  qwt_symbol.cpp
libs/: glew32s.lib  glew32sd.lib
plugins/vcam/: CMakeLists.txt  CVCam_test.cpp  Dll.cpp  Filters.cpp  Filters.def  Filters.h  ICVCam.h  ReadMe.txt  stdafx.cpp  stdafx.h  vcam.cpp
unitTests/: CMakeLists.txt  teamcity_boost.cpp  teamcity_messages.cpp  testBlock.cpp  testGraph.cpp
